[gd_scene load_steps=18 format=2]

[ext_resource path="res://Resources/Textures/Backgrounds/Mountains/layers/parallax-mountain-bg.png" type="Texture" id=1]
[ext_resource path="res://Resources/Textures/Backgrounds/Mountains/layers/parallax-mountain-mountains.png" type="Texture" id=2]
[ext_resource path="res://Resources/Textures/Backgrounds/Mountains/layers/parallax-mountain-foreground-trees.png" type="Texture" id=3]
[ext_resource path="res://Resources/Textures/Backgrounds/Mountains/layers/parallax-mountain-montain-far.png" type="Texture" id=4]
[ext_resource path="res://Resources/Textures/Backgrounds/Mountains/layers/parallax-mountain-trees.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UI/Parallax.gd" type="Script" id=6]
[ext_resource path="res://Resources/Shaders/MainTheme.tres" type="Theme" id=7]
[ext_resource path="res://Resources/Fonts/Aldrich/Aldrich-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/UI/TitleScreenUI.gd" type="Script" id=9]
[ext_resource path="res://Resources/Textures/GUI/TitleBetter.png" type="Texture" id=10]
[ext_resource path="res://Resources/Fonts/Font2.tres" type="DynamicFont" id=11]
[ext_resource path="res://Scenes/UI/Settings.tscn" type="PackedScene" id=12]
[ext_resource path="res://Resources/Textures/Kinematic/ggez.png" type="Texture" id=13]
[ext_resource path="res://Resources/Textures/GUI/Tutorial.png" type="Texture" id=14]
[ext_resource path="res://Resources/Textures/GUI/GG.png" type="Texture" id=15]
[ext_resource path="res://Resources/Textures/GUI/Credits.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2( 1.914, 1.8 )
transform = Transform2D( 1.914, 0, 0, 1.8, 0, 0 )
script = ExtResource( 6 )
layer2 = 2.0
layer3 = 2.5
layer4 = 20.0
layer5 = 30.0

[node name="PL1" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/PL1"]
position = Vector2( 512, 300.588 )
scale = Vector2( 3.76471, 3.75735 )
texture = ExtResource( 1 )

[node name="PL2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1020, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/PL2"]
position = Vector2( 512, 300 )
scale = Vector2( 3.75, 3.75 )
texture = ExtResource( 4 )

[node name="PL3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 1020, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/PL3"]
position = Vector2( 512, 300 )
scale = Vector2( 3.75, 3.75 )
texture = ExtResource( 2 )

[node name="PL4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 1 )
motion_mirroring = Vector2( 1020, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/PL4"]
position = Vector2( 512, 300 )
scale = Vector2( 3.75, 3.75 )
texture = ExtResource( 5 )

[node name="PL5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 1 )
motion_mirroring = Vector2( 986, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/PL5"]
position = Vector2( 512, 300 )
scale = Vector2( 3.75, 3.75 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="HBoxContainer" parent="Control/MarginContainer"]
margin_right = 1860.0
margin_bottom = 980.0

[node name="Panel" type="PanelContainer" parent="Control/MarginContainer/GridContainer"]
margin_right = 525.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2" type="VBoxContainer" parent="Control/MarginContainer/GridContainer/Panel"]
margin_right = 525.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Control" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_right = 525.0
margin_bottom = 24.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.18

[node name="StartButton" type="HBoxContainer" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 28.0
margin_right = 525.0
margin_bottom = 52.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.16

[node name="Control" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/StartButton"]
margin_right = 13.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="StartButton" type="Button" parent="Control/MarginContainer/GridContainer/Panel/Panel2/StartButton"]
margin_left = 17.0
margin_right = 507.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.53
custom_fonts/font = ExtResource( 11 )
text = "Start game"
align = 2

[node name="Control2" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/StartButton"]
margin_left = 511.0
margin_right = 525.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 9
size_flags_stretch_ratio = 0.1

[node name="Control2" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 56.0
margin_right = 525.0
margin_bottom = 81.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="HBoxContainer" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 85.0
margin_right = 525.0
margin_bottom = 109.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.16

[node name="Control" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/SettingsButton"]
margin_right = 13.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="SettingsButton" type="Button" parent="Control/MarginContainer/GridContainer/Panel/Panel2/SettingsButton"]
margin_left = 17.0
margin_right = 507.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.53
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 2

[node name="Control2" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/SettingsButton"]
margin_left = 511.0
margin_right = 525.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 9
size_flags_stretch_ratio = 0.1

[node name="Control4" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 113.0
margin_right = 525.0
margin_bottom = 137.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="HBoxContainer" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 141.0
margin_right = 525.0
margin_bottom = 165.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/TutorialButton"]
margin_right = 13.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="TutorialButton" type="Button" parent="Control/MarginContainer/GridContainer/Panel/Panel2/TutorialButton"]
margin_left = 17.0
margin_right = 507.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.53
custom_fonts/font = SubResource( 1 )
text = "Tutorial"
align = 2

[node name="Control2" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/TutorialButton"]
margin_left = 511.0
margin_right = 525.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 9
size_flags_stretch_ratio = 0.1

[node name="Control6" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 169.0
margin_right = 525.0
margin_bottom = 194.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="HBoxContainer" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 198.0
margin_right = 525.0
margin_bottom = 222.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.16

[node name="Control" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/CreditsButton"]
margin_right = 13.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="CreditsButton" type="Button" parent="Control/MarginContainer/GridContainer/Panel/Panel2/CreditsButton"]
margin_left = 17.0
margin_right = 507.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.53
custom_fonts/font = SubResource( 1 )
text = "Credits"
align = 2

[node name="Control2" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/CreditsButton"]
margin_left = 511.0
margin_right = 525.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 9
size_flags_stretch_ratio = 0.1

[node name="Control3" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 226.0
margin_right = 525.0
margin_bottom = 923.0
size_flags_vertical = 3
size_flags_stretch_ratio = 5.11

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/GridContainer/Panel/Panel2/Control3"]
self_modulate = Color( 1, 1, 1, 0.431373 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="HBoxContainer" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 927.0
margin_right = 525.0
margin_bottom = 951.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.16

[node name="Control" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/QuitButton"]
margin_right = 13.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="QuitButton" type="Button" parent="Control/MarginContainer/GridContainer/Panel/Panel2/QuitButton"]
margin_left = 17.0
margin_right = 507.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.53
custom_fonts/font = SubResource( 1 )
text = "Quit game"
align = 2

[node name="Control2" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2/QuitButton"]
margin_left = 511.0
margin_right = 525.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 9
size_flags_stretch_ratio = 0.1

[node name="Control5" type="Control" parent="Control/MarginContainer/GridContainer/Panel/Panel2"]
margin_top = 955.0
margin_right = 525.0
margin_bottom = 980.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control/MarginContainer/GridContainer"]
margin_left = 529.0
margin_right = 1860.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.53

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/GridContainer/Control"]
anchor_left = 0.0465815
anchor_top = 0.310204
anchor_right = 0.93163
anchor_bottom = 0.930612
margin_right = 0.000732422
margin_bottom = -6.10352e-05
texture = ExtResource( 10 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Settings" parent="Control" instance=ExtResource( 12 )]
visible = false

[node name="TextureRect1" type="TextureRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="Button" parent="Control/TextureRect1"]
anchor_left = 0.155258
anchor_top = 0.942905
anchor_right = 0.405258
anchor_bottom = 0.965127
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.53
custom_fonts/font = SubResource( 1 )
text = "Close tutorial"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect2" type="TextureRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="Control/TextureRect2"]
anchor_left = 0.151618
anchor_top = 0.920883
anchor_right = 0.401618
anchor_bottom = 0.943105
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.53
custom_fonts/font = SubResource( 1 )
text = "Close Credits"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect3" type="TextureRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="Control/TextureRect3"]
anchor_left = 0.661278
anchor_top = 0.916478
anchor_right = 0.911278
anchor_bottom = 0.9387
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.53
custom_fonts/font = SubResource( 1 )
text = "Close"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/MarginContainer/GridContainer/Panel/Panel2/StartButton/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="button_down" from="Control/MarginContainer/GridContainer/Panel/Panel2/SettingsButton/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/GridContainer/Panel/Panel2/TutorialButton/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/GridContainer/Panel/Panel2/CreditsButton/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/GridContainer/Panel/Panel2/QuitButton/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Control/TextureRect1/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Control/TextureRect2/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Control/TextureRect3/CloseButton" to="." method="_on_CloseButton_pressed"]
